--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 
                 <nav class="menu1">
                     <ul>
-                        <li><a href="../index.html" target="_self" class="linkfoto1"><img src="imagenes/logo.png" width="70" alt="logo" title="Inicio" class="imagen1"></a></li>
+                        <li><a href="index.html" target="_self" class="linkfoto1"><img src="imagenes/logo.png" width="70" alt="logo" title="Inicio" class="imagen1"></a></li>
                         <li><a class="linkairpods" target="_self" href="paginas/opiniones.html" title="Da tu opinión">Opiniones</a></li>
                         <li><a class="linkiphone" target="_blank" href="http://www.ucv.ve/" title="Ver UCV">UCV</a></li>
                         <li><a class="linkcontacto" target="_blank" href="mailto:ripblister@gmail.com" title="Enviar Mail">Contacto</a></li>
